--- a/style_2.css
+++ b/style_2.css
@@ -15,17 +15,19 @@
     padding: 0;
     margin: 0;
 }
+div.bar {
+    min-width: 1200px;
+}
 div.bar > p {
     display: inline-block;
     margin: 0.8% 2.5%;
     padding: 0;
     border: 1px solid red;
-    font-size: 15px;
-    font-family: 'Oswald', sans-serif;
+    font-size: 1em;
     letter-spacing: 1px;
 }
 #brand{
-    font-size: 30px;
+    font-size: 3em;
     font-family: KCC-eunyoung;
     margin-left: 30%;
 }
@@ -33,27 +35,37 @@ div.bar > p {
     background-color: red;
     color: white;
 }
+div.main {
+    min-width: 1200px;
+}
 div.main > img.main_img {
     margin: 0;
     padding: 0;
     width: 100%;
+    min-width: 1200px;
     height: auto;
 }
 .back {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     display: inline-block;
     width: 100%;
+    min-width: 1200px;
+    border: red 1px solid;
 }
 div.back > div.info {
     float: left;
     padding: 0;
     margin: 5% 0 auto 8%;
-    width: 40%;
+    width: 450px;
     height: auto;
+    display: inline;
+    border: 1px solid red;
 }
 div.back > div.info > p {
     display: inline-block;
+    border: 1px solid red;
 }
 div.back > div.info > p.title {
     font-family: KCC-eunyoung;
@@ -69,12 +81,14 @@ div.back > div.info > p.t {
     margin: 5% 0 5% 3%;
     padding: 0;
     font-family: S-CoreDream-4Regular;
+    width:290px;
 }
 div.back > div.news {
     float: right;
     margin: 5% 10% 5% auto;
     padding: 0;
-    width: 35%
+    width: 400px;
+    border: 1px solid red;
 }
 div.news > p {
     padding:  5% 0;
